--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,5 +16,4 @@ rk_01:
       - cd rk_01_01
       - gcc -Wall -Werror main.c
       - cd ../rk_01_02
-      - gcc -Wall -Werror -Wfloat-equal -Wfloat-conversion -Wpedantic main.c
-      
+      - gcc --std=c99 -Wall -Werror -Wfloat-equal -Wfloat-conversion -Wpedantic main.c
