--- a/lab_52_1/sort.c.template
+++ b/lab_52_1/sort.c.template
@@ -4,7 +4,7 @@
 
 /* Params:
  *   TYPE - file / array
- *   IN_TYPE - FILE * / struct Student *
+ *   IN_TYPE - FILE * / struct s_Student *
 **/
 
 #ifdef TYPE
@@ -14,7 +14,7 @@
 
 void TEMPLATE(sort, TYPE) (IN_TYPE students, int n)
 {
-    struct Student a, b;
+    struct s_Student a, b;
     for (int i = 1; i < n; i++)
     {
         for (int j = 0; j < n - i; j++)
