--- a/lab_52_1/delete.c.template
+++ b/lab_52_1/delete.c.template
@@ -15,7 +15,7 @@
 int TEMPLATE(delete, TYPE) (IN_TYPE students_in, IN_TYPE students_out, int n)
 {
     struct s_Student a;
-    double mean = 0;
+    double sum = 0;
 
     for (int i = 0; i < n; i++)
     {
