add lab_07 run func test

--- a/lab_07_5/makefile
+++ b/lab_07_5/makefile
@@ -1,4 +1,4 @@
-.PHONY : all run debug prep runmem gcov clean   unit func
+.PHONY : all run debug runmem gcov clean func   unit
 
 CC := gcc
 CFLAGS := --std=c99 -Wall -Werror -Wfloat-equal -Wfloat-conversion -Wpedantic
@@ -6,10 +6,9 @@ OUTDIR := ./out
 SRCS := $(wildcard src/*.c)
 OBJS := $(SRCS:src/%.c=$(OUTDIR)/%.o)
 
-all : prep app.exe
+all : app.exe
 
-run : all
-	./app.exe
+run : ./app.exe
 
 app.exe : $(OBJS)
 	$(CC) $(CFLAGS) -o $@ $^
@@ -20,16 +19,16 @@ $(OUTDIR)/%.o : src/%.c
 debug : CFLAGS += -g -fno-inline -fno-omit-frame-pointer -O0 --coverage
 debug : all
 
-runmem: debug
+runmem : debug
 	drmemory -- ./app.exe
 
-gcov: $(OBJS:.o=.gcda)
+gcov : $(OBJS:.o=.gcda)
 	@rm -f $(OUTDIR)/*.c.gcov
 	@gcov -d $^
 	@mv *.c.gcov $(OUTDIR)
 
+func : app.exe
+	@./func_tests/test.sh ./app.exe
+
 clean :
 	@rm -f *.exe $(OUTDIR)/*.o $(OUTDIR)/*.gcda $(OUTDIR)/*.gcno
-
-prep :
-	@mkdir -p $(OUTDIR)
