--- a/lab_07_5/makefile
+++ b/lab_07_5/makefile
@@ -1,4 +1,4 @@
-.PHONY : all run debug runmem gcov clean func   unit
+.PHONY : all run debug runmem gcov clean func check   unit
 
 CC := gcc
 CFLAGS := --std=c99 -Wall -Werror -Wfloat-equal -Wfloat-conversion -Wpedantic
@@ -6,9 +6,13 @@ OUTDIR := ./out
 SRCS := $(wildcard src/*.c)
 OBJS := $(SRCS:src/%.c=$(OUTDIR)/%.o)
 
+CODECHECKERDIR := ../../CodeChecker/CodeChecker
+CODECHECKER := $(CODECHECKERDIR)/CodeChecker.exe --rules $(CODECHECKERDIR)/Rules.txt
+
 all : app.exe
 
-run : ./app.exe
+run : app.exe
+	./app.exe $(args)
 
 app.exe : $(OBJS)
 	$(CC) $(CFLAGS) -o $@ $^
@@ -20,7 +24,7 @@ debug : CFLAGS += -g -fno-inline -fno-omit-frame-pointer -O0 --coverage
 debug : all
 
 runmem : debug
-	drmemory -- ./app.exe
+	drmemory -- ./app.exe $(args)
 
 gcov : $(OBJS:.o=.gcda)
 	@rm -f $(OUTDIR)/*.c.gcov
@@ -32,3 +36,7 @@ func : app.exe
 
 clean :
 	@rm -f *.exe $(OUTDIR)/*.o $(OUTDIR)/*.gcda $(OUTDIR)/*.gcno
+
+check : SHELL:=/usr/bin/bash
+check :
+	$(CODECHECKER) $(SRCS)
