--- a/lab_07_5/makefile
+++ b/lab_07_5/makefile
@@ -1,10 +1,15 @@
-.PHONY : all run debug runmem gcov clean func check   unit
+.PHONY : all run debug runmem gcov clean func check unit
 
 CC := gcc
 CFLAGS := --std=c99 -Wall -Werror -Wfloat-equal -Wfloat-conversion -Wpedantic
+CFLAGS += $(cflags)
 OUTDIR := ./out
 SRCS := $(wildcard src/*.c)
 OBJS := $(SRCS:src/%.c=$(OUTDIR)/%.o)
+
+UNITCFLAGS := -lcheck -lpthread -lrt
+UNITSRCS := $(wildcard unit_tests/*.c)
+UNITOBJS := $(UNITSRCS:unit_tests/%.c=$(OUTDIR)/%.o)
 
 CODECHECKERDIR := ../../CodeChecker/CodeChecker
 CODECHECKER := $(CODECHECKERDIR)/CodeChecker.exe --rules $(CODECHECKERDIR)/Rules.txt
@@ -17,22 +22,31 @@ run : app.exe
 app.exe : $(OBJS)
 	$(CC) $(CFLAGS) -o $@ $^
 
-$(OUTDIR)/%.o : src/%.c
-	$(CC) $(CFLAGS) -o $@ -c $<
-
 debug : CFLAGS += -g -fno-inline -fno-omit-frame-pointer -O0 --coverage
 debug : all
 
 runmem : debug
 	drmemory -- ./app.exe $(args)
 
-gcov : $(OBJS:.o=.gcda)
+gcov :
 	@rm -f $(OUTDIR)/*.c.gcov
-	@gcov -d $^
+	@gcov -d $(OUTDIR)/*.gcda
 	@mv *.c.gcov $(OUTDIR)
 
 func : app.exe
 	@./func_tests/test.sh ./app.exe
+
+unit : unit_tests.exe
+	./unit_tests.exe
+
+unit_tests.exe : $(UNITOBJS) $(filter-out $(OUTDIR)/main.o, $(OBJS))
+	$(CC) $(CFLAGS) -o $@ $^ $(UNITCFLAGS)
+
+$(OUTDIR)/check_%.o : unit_tests/check_%.c
+	$(CC) $(CFLAGS) -o $@ -c $<
+
+$(OUTDIR)/%.o : src/%.c
+	$(CC) $(CFLAGS) -o $@ -c $<
 
 clean :
 	@rm -f *.exe $(OUTDIR)/*.o $(OUTDIR)/*.gcda $(OUTDIR)/*.gcno
