--- a/lab_12_1_2/Makefile
+++ b/lab_12_1_2/Makefile
@@ -9,3 +9,7 @@ build :
 
 unit :
 	python3 -m unittest discover -s unit_tests
+
+clean :
+	rm -rf $(wildcard ./*/__pycache__/)
+	make -C deps/array clean
